# jadecli-codespaces

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .releaserc.json  CLAUDE.md  Makefile  PROGRESS.md  features.json  init.sh  pyproject.toml  schema.sql
.claude/: features-catalog.md  setup-checklist.md
.claude/agents/: config-reviewer.md
.claude/commands/: entity-list.md  entity-query.md  entity-register.md
.claude/hooks/: post-tool-use.py  session-start.py
.claude/output-styles/: concise-config.md  guided-setup.md
.claude/rules/: entity-store.md  settings.md  setup-conventions.md
.claude/skills/: doc-lookup.md
.claude/skills/docs-lookup/: SKILL.md
.claude/skills/setup-helper/: SKILL.md
agents/: __init__.py  dotfiles.py  logging.py  metrics.py  models.py  ollama_client.py  orchestrator.py  router.py
cli/: __init__.py  settings.py
doc_index/: README.md  __init__.py  cache.py  chunker.py  cli.py  embedder.py  indexer.py  vector_store.py
docs/: CLAUDE.md
docs/analysis/: doc-structure-analysis.md
docs/anthropic/: index.md
docs/anthropic/ai-for-science-program-rules/: ai-for-science-program-rules.md
docs/anthropic/candidate-ai-guidance/: candidate-ai-guidance.md
docs/anthropic/careers/: careers.md
docs/anthropic/claude/: claude-haiku.md  claude-opus.md  claude-sonnet.md
docs/anthropic/company/: company.md
docs/anthropic/constitution/: constitution.md
docs/chezmoi/: README.md
docs/plans/: 2026-02-04-doc-embeddings-vector-search.md
docs/platform-claude/: claude-api-primer.md  cookbooks.md  glossary.md  llms.txt  prompt-library.md
docs/ruff/: 01-installing-ruff.md  02-ruff-linter.md  03-ruff-formatter.md  04-configuring-ruff.md  README.md  index.md  tutorial.md
docs/setup-claude/: 01-configuring-and-using-styles.md  02-chat-search-and-memory.md  03-personalization-features.md  04-create-and-manage-projects.md  05-project-visibility-and-sharing.md  06-google-drive-integration.md  07-connect-your-tools.md  08-gmail-google-calendar-integrations.md  09-setting-up-integrations.md  10-ios-intents-shortcuts-widgets.md  README.md
docs/ty/: 01-installation.md  02-type-checking.md  03-editor-integration.md  04-configuration.md  05-rules.md  06-reference.md  README.md
docs/wslg/: README.md  claude-code-terminal-config.md  ghostty-config.md  kitty-config.md  wezterm-config.md
dotfiles/: README.md
entity_cli/: package.json  tsconfig.json
entity_cli/bridge/: python_bridge.ts
entity_cli/src/: App.tsx  index.tsx
entity_store/: __init__.py  cache.py  check_breaking_changes.py  cli.py  frontmatter.py  models.py  neon_client.py  registry.py  validate_frontmatter.py  visualize.py
entity_store/parsers/: __init__.py  markdown_parser.py  python_parser.py  typescript_parser.py
entity_store/query/: __init__.py  graphql.py
mcp_server/: CLAUDE.md  README.md  __init__.py  __main__.py  server.py
research/jade-ide/: 2604-research-append-progress.txt  README.md  bootstrap-2604.sh  init.sh  unmodified_prompt.md
tests/: __init__.py  test_chunker.py  test_doc_cache.py  test_embedder.py  test_entity_store.py  test_indexer.py  test_vector_store.py
tests/agents/: __init__.py  test_models.py  test_router.py
(+152 files in other folders)
